rust: update to 1.83.0

--- a/mingw-w64-rust/PKGBUILD
+++ b/mingw-w64-rust/PKGBUILD
@@ -9,7 +9,7 @@ if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
 fi
 
 rust_dist_server=https://static.rust-lang.org/dist
-#rust_dist_server=https://dev-static.rust-lang.org/dist/2024-10-14
+#rust_dist_server=https://dev-static.rust-lang.org/dist/2024-11-25
 
 embed_manifest_version=1.3.1
 embed_manifest_url=https://gitlab.com/careyevans/embed-manifest/-/archive/v${embed_manifest_version}/embed-manifest-v${embed_manifest_version}.tar.gz
@@ -19,7 +19,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-rust-wasm")
          "${MINGW_PACKAGE_PREFIX}-rust-src")
-pkgver=1.82.0
+pkgver=1.83.0
 pkgrel=1
 pkgdesc="Systems programming language focused on safety, speed and concurrency (mingw-w64)"
 arch=('any')
@@ -32,43 +32,37 @@ msys2_references=(
 )
 license=('spdx:Apache-2.0 AND MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-curl"
              "${MINGW_PACKAGE_PREFIX}-libffi"
              "${MINGW_PACKAGE_PREFIX}-libssh2"
-             "${MINGW_PACKAGE_PREFIX}-lldb"
              "${MINGW_PACKAGE_PREFIX}-llvm"
              "${MINGW_PACKAGE_PREFIX}-openssl"
+             "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-autotools"
              $([[ "$_bootstrapping" == "no" ]] && echo "${MINGW_PACKAGE_PREFIX}-rust")
              $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-wasi-libc ${MINGW_PACKAGE_PREFIX}-wasm-component-ld")
+             "${MINGW_PACKAGE_PREFIX}-zstd"
              "${MINGW_PACKAGE_PREFIX}-zlib")
 source=("${rust_dist_server}/${_realname}c-${pkgver}-src.tar.gz"{,.asc}
         "${embed_manifest_url}"
         "config.toml"
         "0001-rustc-llvm-fix-libs.patch"
         "0004-compiler-Use-wasm-ld-for-wasm-targets.patch"
-        "0005-win32-config.patch"
         "0008-disable-self-contained-for-gnu-targets.patch"
         "0011-disable-uac-for-installer.patch"
-        "0012-vendor-embed-manifest.patch"
-        # remove after 1.83.0 release
-        "0013-generate-import-libraries-on-gnullvm.patch"
-        "https://github.com/rust-lang/rust/pull/130034.patch")
+        "0012-vendor-embed-manifest.patch")
 noextract=(${_realname}c-${pkgver}-src.tar.gz)
-sha256sums=('7c53f4509eda184e174efa6ba7d5eeb586585686ce8edefc781a2b11a7cf512a'
+sha256sums=('722d773bd4eab2d828d7dd35b59f0b017ddf9a97ee2b46c1b7f7fac5c8841c6e'
             'SKIP'
             '24ef6d949c0b5b1940c1d6a7aad78d86012152fb8845a1644bc939350d7b75e2'
-            '21ca19cc4247376adf9a5a68ca43fe90baf9774e8c79a06f6df94bf807014613'
+            '832765ebf86dca77ea371decb9937f77dbf3a377cbb2240d9016f2a82d23b363'
             '7cb1773c288ffb1c1e751edc49b1890c84bf9c362742bc5225d19d474edb73a0'
             '56882f1a0f1404c10c7726d6cc37444f2b343e72b969badfcb43760f80db0f32'
-            '7d1c4e49524b835a8eadc961b39f5594b12a522a1e24368999be2c7e85399e4e'
             '98bc3f2bd7371a5b8d14fd7b03bf05574e206d1d9e52bcfbe66d71398504da3c'
             '761d73328d9695a7a2bd2a10be8225f4a56801fee54cbb51c0841b7f16e2bde6'
-            '23fc45f4e718770375be1c5196f035075de16d25e8f895100a3d1d2492995f86'
-            '7ebec5945f9fd38729da513fba8679efbad19bdde8a5d0d8ea097e5b9a7a99db'
-            '6558ca2ef70f2dafce3fc2ffcfe0db0ad6a7728f31a13ddddd63a9eee9e57b72')
+            '23fc45f4e718770375be1c5196f035075de16d25e8f895100a3d1d2492995f86')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
               'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
@@ -107,13 +101,11 @@ prepare() {
   cd ${_realname}c-${pkgver}-src
   apply_patch_with_msg \
     0001-rustc-llvm-fix-libs.patch \
-    0005-win32-config.patch \
     0008-disable-self-contained-for-gnu-targets.patch
 
   if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
     apply_patch_with_msg \
-      0011-disable-uac-for-installer.patch \
-      0013-generate-import-libraries-on-gnullvm.patch
+      0011-disable-uac-for-installer.patch
   fi
   apply_patch_with_msg \
     0012-vendor-embed-manifest.patch
@@ -122,10 +114,6 @@ prepare() {
     apply_patch_with_msg \
       0004-compiler-Use-wasm-ld-for-wasm-targets.patch
   fi
-
-  # fix `wasm-component-ld` being built even when it's not enabled. remove after 1.83.0 release
-  apply_patch_with_msg \
-    130034.patch
 }
 
 build() {
@@ -143,9 +131,6 @@ build() {
   if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
     # We have to do the following because rust doesn't count x86_64-w64-mingw32 as a target triple
     export OSTYPE="$CARCH-pc-windows-gnullvm"
-
-    # Otherwise it uses gcc during bootstrap, even when we build for clang
-    export CARGO_TARGET_${CARCH^^}_PC_WINDOWS_GNULLVM_LINKER="${CC}"
   else
     # We have to do the following because rust doesn't count x86_64-w64-mingw32 as a target triple
     export OSTYPE="$CARCH-pc-windows-gnu"
@@ -200,9 +185,6 @@ build() {
   #_rust_build+=("--verbose")
 
   # create the install at a temporary directory
-  DEP_NGHTTP_ROOT=${MINGW_PREFIX} \
-  DEP_OPENSSL_ROOT=${MINGW_PREFIX} \
-  DEP_Z_ROOT=${MINGW_PREFIX} \
   DESTDIR="$PWD"/dest-rust python ../${_realname}c-${pkgver}-src/x.py install "${_rust_build[@]}"
 
   if [[ ${CARCH} != i686 ]]; then
@@ -219,17 +201,18 @@ build() {
 
 check() {
   cd "${MSYSTEM}"
-  DEP_NGHTTP_ROOT=${MINGW_PREFIX} \
-  DEP_OPENSSL_ROOT=${MINGW_PREFIX} \
-  DEP_Z_ROOT=${MINGW_PREFIX} \
   python ../${_realname}c-${pkgver}-src/x.py test --stage 2 --exclude src/test/debuginfo
 }
 
 package_rust() {
   depends=("${MINGW_PACKAGE_PREFIX}-cc"
-           "${MINGW_PACKAGE_PREFIX}-curl"
            "${MINGW_PACKAGE_PREFIX}-libxml2"
-           "${MINGW_PACKAGE_PREFIX}-libssh2")
+           "${MINGW_PACKAGE_PREFIX}-zstd"
+           "${MINGW_PACKAGE_PREFIX}-zlib")
+  if [[ ${CARCH} != i686 ]]; then
+    optdepends=("${MINGW_PACKAGE_PREFIX}-gdb: for rust-gdb script"
+                "${MINGW_PACKAGE_PREFIX}-lldb: for rust-lldb script")
+  fi
   conflicts=("${MINGW_PACKAGE_PREFIX}-rust-docs")
   replaces=("${MINGW_PACKAGE_PREFIX}-rust-docs")
 
@@ -238,8 +221,12 @@ package_rust() {
   cp -a dest-rust/* "${pkgdir}"
 
   # delete unnecessary files, e.g. components and manifest files only used for the uninstall script
+  # and rust-{gdb{,gui},lldb} for i686
   cd "${pkgdir}${MINGW_PREFIX}/lib/rustlib"
   rm components install.log manifest-* rust-installer-version uninstall.sh
+  if [[ ${CARCH} == i686 ]]; then
+    rm "${pkgdir}${MINGW_PREFIX}"/bin/rust-{gdb{,gui},lldb}
+  fi
 
   install -d "${pkgdir}${MINGW_PREFIX}/share/bash-completion/completions"
   mv "${pkgdir}${MINGW_PREFIX}/etc/bash_completion.d/cargo" \
