--- a/mingw-w64-rust/config.toml
+++ b/mingw-w64-rust/config.toml
@@ -2,12 +2,13 @@
 profile = "dist"
 
 # see src/bootstrap/src/utils/change_tracker.rs
-change-id = 129295
+change-id = 131075
 
 [build]
 #cargo = "$MINGW_PREFIX/bin/cargo.exe"
 #rustc = "$MINGW_PREFIX/bin/rustc.exe"
 #rustfmt = "$MINGW_PREFIX/bin/rustfmt.exe"
+#cargo-clippy = "$MINGW_PREFIX/bin/cargo-clippy.exe"
 build = "$OSTYPE"
 host = ["$OSTYPE"]
 target = [
@@ -44,6 +45,7 @@ channel = "stable"
 description = "Rev$PKGREL, Built by MSYS2 project"
 rpath = false
 frame-pointers = true
+llvm-bitcode-linker = false
 lld = false
 codegen-tests = false
 deny-warnings = false
@@ -53,26 +55,51 @@ backtrace-on-ice = true
 
 [dist]
 compression-formats = ["gz"]
+compression-profile = "fast"
 include-mingw-linker = false
 
 [target.$OSTYPE]
+cc = "$MINGW_PREFIX/bin/cc.exe"
+cxx = "$MINGW_PREFIX/bin/c++.exe"
+ar = "$MINGW_PREFIX/bin/ar.exe"
+ranlib = "$MINGW_PREFIX/bin/ranlib.exe"
 llvm-config = "$MINGW_PREFIX/bin/llvm-config.exe"
 
 [target.wasm32-unknown-unknown]
+cc = "$MINGW_PREFIX/bin/clang.exe"
+cxx = "$MINGW_PREFIX/bin/clang++.exe"
+ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
+ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
+linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
 sanitizers = false
 profiler = false
 
 [target.wasm32-wasip1]
+cc = "$MINGW_PREFIX/bin/clang.exe"
+cxx = "$MINGW_PREFIX/bin/clang++.exe"
+ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
+ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
+linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
 
 [target.wasm32-wasip1-threads]
+cc = "$MINGW_PREFIX/bin/clang.exe"
+cxx = "$MINGW_PREFIX/bin/clang++.exe"
+ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
+ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
+linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
 
 [target.wasm32-wasip2]
+cc = "$MINGW_PREFIX/bin/clang.exe"
+cxx = "$MINGW_PREFIX/bin/clang++.exe"
+ar = "$MINGW_PREFIX/bin/llvm-ar.exe"
+ranlib = "$MINGW_PREFIX/bin/llvm-ranlib.exe"
+linker = "$MINGW_PREFIX/bin/wasm-ld.exe"
 sanitizers = false
 profiler = false
 wasi-root = "$MINGW_PREFIX/share/wasi-sysroot"
