ccache: don't build docs on i686

--- a/mingw-w64-ccache/PKGBUILD
+++ b/mingw-w64-ccache/PKGBUILD
@@ -5,7 +5,7 @@ _realname=ccache
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.10.2
-pkgrel=3
+pkgrel=4
 pkgdesc="Compiler cache that speeds up recompilation by caching previous compilations (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'mingw32' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
@@ -16,14 +16,15 @@ replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-asciidoctor"
+             $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-asciidoctor")
              "${MINGW_PACKAGE_PREFIX}-pkgconf")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-hiredis"
-         "${MINGW_PACKAGE_PREFIX}-zstd"
          "${MINGW_PACKAGE_PREFIX}-fmt"
          "${MINGW_PACKAGE_PREFIX}-xxhash"
-         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-libblake3"))
+         "${MINGW_PACKAGE_PREFIX}-zstd"
+         $([[ ${CARCH} == i686 ]] || echo \
+           "${MINGW_PACKAGE_PREFIX}-hiredis" \
+           "${MINGW_PACKAGE_PREFIX}-libblake3"))
 source=("https://github.com/ccache/ccache/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.xz"{,.asc})
 sha256sums=('c0b85ddfc1a3e77b105ec9ada2d24aad617fa0b447c6a94d55890972810f0f5a'
             'SKIP')
@@ -37,6 +38,18 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ ${CARCH} == x86_64 ]]; then
+    extra_config+=("-DENABLE_DOCUMENTATION=ON")
+  else
+    extra_config+=("-DENABLE_DOCUMENTATION=OFF")
+  fi
+
+  if [[ ${CARCH} == i686 ]]; then
+    extra_config+=("-DREDIS_STORAGE_BACKEND=OFF")
+  else
+    extra_config+=("-DREDIS_STORAGE_BACKEND=ON")
   fi
 
   if [[ "${CC}" == "gcc" ]]; then
@@ -54,7 +67,6 @@ build() {
       -DENABLE_TESTING=OFF \
       -DCCACHE_DEV_MODE=OFF \
       -DWARNINGS_AS_ERRORS=OFF \
-      $([[ ${MSYSTEM_CARCH} == aarch64 ]] && echo "-DENABLE_DOCUMENTATION=OFF") \
       ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
