--- a/mingw-w64-brotli/PKGBUILD
+++ b/mingw-w64-brotli/PKGBUILD
@@ -3,10 +3,11 @@
 _realname=brotli
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-python-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-brotli-testdata")
+         $([[ ${CARCH} == i686 ]] || echo \
+           "${MINGW_PACKAGE_PREFIX}-python-${_realname}" \
+           "${MINGW_PACKAGE_PREFIX}-brotli-testdata"))
 pkgver=1.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Brotli compression library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -15,25 +16,24 @@ msys2_references=(
   "pypi: brotli"
   "cpe: cpe:/a:google:brotli"
 )
-makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
-             "${MINGW_PACKAGE_PREFIX}-python-build"
-             "${MINGW_PACKAGE_PREFIX}-python-installer"
-)
 license=('spdx:MIT')
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/google/brotli/archive/v${pkgver}.tar.gz")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
+             "${MINGW_PACKAGE_PREFIX}-cmake"
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-python-setuptools" \
+               "${MINGW_PACKAGE_PREFIX}-python-build" \
+               "${MINGW_PACKAGE_PREFIX}-python-installer")
+)
+source=("https://github.com/google/brotli/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('e720a6ca29428b803f4ad165371771f5398faba397edf6778837a18599ea13ff')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-}
 
 build() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  if [[ ${CARCH} != i686 ]]; then
+    ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  fi
 
   declare -a extra_config
   if check_option "debug" "n"; then
@@ -82,7 +82,8 @@ package_brotli() {
   cd "${srcdir}"/build-${MSYSTEM}-shared
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -D -m644 "${srcdir}"/brotli-${pkgver}/LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -D -m644 "${srcdir}"/brotli-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
 
 package_python-brotli() {
