z3: don't build python bindings on i686

--- a/mingw-w64-z3/PKGBUILD
+++ b/mingw-w64-z3/PKGBUILD
@@ -4,7 +4,7 @@ _realname=z3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.13.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Z3 is a high-performance theorem prover being developed at Microsoft Research (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -16,9 +16,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-python-build"
-             "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+             $([[ ${CARCH} == i686 ]] || echo \
+               "${MINGW_PACKAGE_PREFIX}-python-build" \
+               "${MINGW_PACKAGE_PREFIX}-python-installer" \
+               "${MINGW_PACKAGE_PREFIX}-python-setuptools"))
 source=("https://github.com/Z3Prover/z3/archive/z3-${pkgver}.tar.gz"
         001-mingw-fixes.patch
         003-fix-dll-exports.patch
@@ -73,13 +74,18 @@ build() {
 
   mkdir -p "${srcdir}"/build-${MSYSTEM}-shared && cd "${srcdir}"/build-${MSYSTEM}-shared
 
+  if [[ ${CARCH} == i686 ]]; then
+    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=OFF")
+  else
+    extra_config+=("-DZ3_BUILD_PYTHON_BINDINGS=ON")
+  fi
+
   msg "Build shared z3"
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DZ3_BUILD_LIBZ3_SHARED=ON \
-    -DZ3_BUILD_PYTHON_BINDINGS=ON \
     -DZ3_USE_LIB_GMP=ON \
     -DZ3_BUILD_TEST_EXECUTABLES=OFF \
     -DZ3_INCLUDE_GIT_HASH=OFF \
@@ -103,8 +109,10 @@ package() {
   cd "${srcdir}"/build-${MSYSTEM}-shared
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install .
 
-  MSYS2_ARG_CONV_EXCL="-p" python -m compileall \
-    -o 0 -o 1 -q -s"${pkgdir}" -p"/" "${pkgdir}${MINGW_PREFIX}/lib/python"*
+  if [[ ${CARCH} != i686 ]]; then
+    MSYS2_ARG_CONV_EXCL="-p" python -m compileall \
+      -o 0 -o 1 -q -s"${pkgdir}" -p"/" "${pkgdir}${MINGW_PREFIX}/lib/python"*
+  fi
 
   install -Dm644 "${srcdir}"/${_realname}-${_realname}-${pkgver}/LICENSE.txt \
     "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt
