libpsl: gtk-doc and libxslt not required at buildtime.

--- a/mingw-w64-libpsl/PKGBUILD
+++ b/mingw-w64-libpsl/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libpsl
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.21.5
-pkgrel=2
+pkgrel=3
 pkgdesc="Public Suffix List library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -23,9 +23,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-gtk-doc"
-             "${MINGW_PACKAGE_PREFIX}-gettext-tools"
-             "${MINGW_PACKAGE_PREFIX}-libxslt")
+             "${MINGW_PACKAGE_PREFIX}-gettext-tools")
+             #"${MINGW_PACKAGE_PREFIX}-gtk-doc"
+             #"${MINGW_PACKAGE_PREFIX}-libxslt"
 source=("https://github.com/rockdaboot/libpsl/releases/download/${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('1dcc9ceae8b128f3c0b3f654decd0e1e891afc6ff81098f227ef260449dae208')
 
