Drop some clang32 packages
The remaining packages are toolchain packages and their dependencies.

--- a/mingw-w64-python-calver/PKGBUILD
+++ b/mingw-w64-python-calver/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2022.6.26
 pkgrel=3
 pkgdesc="Setuptools extension for CalVer package versions (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: calver'
 )
