--- a/mingw-w64-python-pathspec/PKGBUILD
+++ b/mingw-w64-python-pathspec/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.12.1
 pkgrel=2
 pkgdesc='Utility library for gitignore style pattern matching of file paths (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: pathspec'
 )
