--- a/mingw-w64-python-typing_extensions/PKGBUILD
+++ b/mingw-w64-python-typing_extensions/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=4.12.2
 pkgrel=2
 pkgdesc='Backported and Experimental Type Hints for Python 3.5+ (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: typing-extensions'
 )
