--- a/mingw-w64-spdlog/PKGBUILD
+++ b/mingw-w64-spdlog/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.15.0
 pkgrel=1
 pkgdesc='Very fast, header-only/compiled, C++ logging library (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/gabime/spdlog'
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -15,7 +15,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 depends=("${MINGW_PACKAGE_PREFIX}-fmt")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/gabime/spdlog/archive/v${pkgver}.tar.gz"
+source=("https://github.com/gabime/spdlog/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
         001-spdlog_fmt_external.patch)
 sha256sums=('9962648c9b4f1a7bbc76fd8d9172555bad1871fdb14ff4f842ef87949682caa5'
             'a0eb34b7c6920f0db2587460071f53372663c191cdfe34bf5ea2704c309c745f')
