--- a/mingw-w64-xapian-core/PKGBUILD
+++ b/mingw-w64-xapian-core/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.4.23
 pkgrel=1
 pkgdesc='Open source search engine library (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.xapian.org/'
 msys2_references=(
   "cpe: cpe:/a:xapian:xapian-core"
