--- a/mingw-w64-asciidoctor/PKGBUILD
+++ b/mingw-w64-asciidoctor/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.0.23
 pkgrel=2
 pkgdesc="An implementation of AsciiDoc in Ruby (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://github.com/asciidoctor/asciidoctor'
 url='https://asciidoctor.org/'
 license=('spdx:MIT')
