--- a/mingw-w64-cunit/PKGBUILD
+++ b/mingw-w64-cunit/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=2.1.3
 pkgrel=4
 pkgdesc="Lightweight system for writing, administering, and running unit tests in C (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://cunit.sourceforge.io/'
 license=('LGPL2.1')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
