--- a/mingw-w64-cython/PKGBUILD
+++ b/mingw-w64-cython/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=3.0.11
 pkgrel=2
 pkgdesc="C-Extensions for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://cython.org/"
 msys2_repository_url="https://github.com/cython/cython"
 msys2_references=(
