--- a/mingw-w64-hiredis/PKGBUILD
+++ b/mingw-w64-hiredis/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.0
 pkgrel=2
 pkgdesc="Minimalistic C client for Redis (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/redis/hiredis"
 msys2_references=(
   "cpe: cpe:/a:redis:hiredis"
