--- a/mingw-w64-libyaml/PKGBUILD
+++ b/mingw-w64-libyaml/PKGBUILD
@@ -7,15 +7,14 @@ pkgver=0.2.5
 pkgrel=2
 pkgdesc="YAML 1.1 library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://yaml.org/"
 msys2_references=(
   "cpe: cpe:/a:pyyaml:libyaml"
 )
-license=("MIT")
+license=("spdx:MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-autotools")
-options=('staticlibs' 'strip')
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/yaml/libyaml/archive/${pkgver}.tar.gz"
+source=("https://github.com/yaml/libyaml/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-Proper-mingw-YAML_DECLARE-definition.patch"
         "0002-libyaml-no-undefined.patch")
 sha256sums=('fa240dbf262be053f3898006d502d514936c818e422afdcf33921c63bed9bf2e'
@@ -31,8 +30,7 @@ prepare() {
 }
 
 build() {
-  [[ -d ${srcdir}/build-${MINGW_CHOST} ]] && rm -rf ${srcdir}/build-${MINGW_CHOST}
-  mkdir -p ${srcdir}/build-${MINGW_CHOST} && cd ${srcdir}/build-${MINGW_CHOST}
+  mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
 
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
@@ -44,6 +42,6 @@ build() {
 }
 
 package() {
-  cd "${srcdir}/build-${MINGW_CHOST}"
+  cd "${srcdir}/build-${MSYSTEM}"
   make DESTDIR="${pkgdir}" install
 }
