--- a/mingw-w64-python-setuptools-scm/PKGBUILD
+++ b/mingw-w64-python-setuptools-scm/PKGBUILD
@@ -3,16 +3,13 @@
 _realname=setuptools-scm
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=8.0.4
 pkgrel=2
 pkgdesc='Handles managing your python package versions in scm metadata (mingw-w64)'
 url='https://github.com/pypa/setuptools_scm'
 license=('spdx:MIT')
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: setuptools-scm'
 )
