--- a/mingw-w64-python-trove-classifiers/PKGBUILD
+++ b/mingw-w64-python-trove-classifiers/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2024.10.16
 pkgrel=2
 pkgdesc="Canonical source for classifiers on PyPI (pypi.org). (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux:python-trove-classifiers'
   'pypi: trove-classifiers'
