--- a/mingw-w64-allegro/PKGBUILD
+++ b/mingw-w64-allegro/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=allegro
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.2.9.1
+pkgver=5.2.10.0
 pkgrel=1
 pkgdesc="Portable library mainly aimed at video game and multimedia programming (mingw-w64)"
 arch=(any)
@@ -11,6 +11,7 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: allegro'
 )
+msys2_repository_url='https://github.com/liballeg/allegro5'
 url="https://liballeg.org/"
 license=('spdx:Zlib')
 depends=("${MINGW_PACKAGE_PREFIX}-dumb"
@@ -32,7 +33,7 @@ source=(${_realname}-${pkgver}.tar.gz::https://github.com/liballeg/allegro5/arch
 conflicts=("${MINGW_PACKAGE_PREFIX}-allegro-static")
 provides=("${MINGW_PACKAGE_PREFIX}-allegro-static")
 noextract=(${_realname}-${pkgver}.tar.gz)
-sha256sums=('b1eb13d5f22b80e6380c70143e583ed823e3738282545286dab705e2096e8680')
+sha256sums=('c0cf24e76fa17de7fa3b07a9ea0c9db7d001c01d3f266fcfd698a4b5f337246c')
 
 prepare() {
   rm -rf ${_realname}5-${pkgver}
