python-ufolib2: update to 0.17.0

--- a/mingw-w64-python-ufolib2/PKGBUILD
+++ b/mingw-w64-python-ufolib2/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: J. Peter Mugaas <jpmugaas@suddenlink.net>
 
 _realname=ufolib2
-_pyname=ufoLib2
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.16.0
-pkgrel=2
+pkgver=0.17.0
+pkgrel=1
 pkgdesc="A library to deal with UFO font sources (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: ufoLib2'
 )
+msys2_repository_url='https://github.com/fonttools/ufoLib2'
 url='https://ufolib2.readthedocs.io/'
 license=('spdx:Apache-2.0')
 _pydeps=(attrs
@@ -25,11 +25,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('49f0dc7f72ccacfe7faefe0d53d37971d45664d8b0563ef36956fa7bfa55a2bd')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('891524052b3636a25b9a92f13f7fd8c24e15483bac96ccd0245ae947d127248b')
 
 prepare() {
-  cd "${srcdir}/${_pyname}-${pkgver}"
+  cd "${srcdir}/${_realname}-${pkgver}"
 
   ## (OPTIONAL) Only if setuptools-scm is used
   # Set version for setuptools_scm
@@ -38,7 +38,7 @@ prepare() {
 
 build() {
   msg "Python build for ${MSYSTEM}"
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
