armadillo: update to 14.2.1

--- a/mingw-w64-armadillo/PKGBUILD
+++ b/mingw-w64-armadillo/PKGBUILD
@@ -3,19 +3,18 @@
 _realname=armadillo
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=14.0.3
+pkgver=14.2.1
 pkgrel=1
 pkgdesc="Fast C++ matrix library with syntax similar to MATLAB and Octave (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://arma.sourceforge.io/"
+msys2_repository_url="https://gitlab.com/conradsnicta/armadillo-code"
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-hdf5"
          "${MINGW_PACKAGE_PREFIX}-openblas"
          "${MINGW_PACKAGE_PREFIX}-superlu"
-         $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-i686* ]] || echo "${MINGW_PACKAGE_PREFIX}-arpack")
-         )
+         "${MINGW_PACKAGE_PREFIX}-arpack")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
@@ -23,8 +22,8 @@ install=${_realname}-${MSYSTEM}.install
 source=(https://sourceforge.net/projects/arma/files/${_realname}-${pkgver}.tar.xz
         0001-mingw-config-fix.patch
         0002-fix-pkgconfig-file.patch)
-sha256sums=('ebd6215eeb01ee412fed078c8a9f7f87d4e1f6187ebcdc1bc09f46095a4f4003'
-            '772719e60eb2970ecb37844382dbcb6d0439f949c5080f9865798115640b612a'
+sha256sums=('2495815cf9d130f70fffb6a12733d0dcaf86cbaac51e8b4b82ad25183eda1dd5'
+            'a2d0b9bbdc5a5a2006bf2a56bb2041784d576cdd5c60b9cef1b158cfb0468ae8'
             '830adb017e12c0e90671471dc6870a28ee21755a55e95280a04f73c2d65d665b')
 
 # Helper macros to help make tasks easier #
@@ -47,12 +46,20 @@ prepare() {
 build() {
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
 
+  declare -a _extra_config
+  if check_option "debug" "n"; then
+    _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
+  else
+    _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   "${MINGW_PREFIX}"/bin/cmake.exe \
     -GNinja \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
-    -DCMAKE_BUILD_TYPE=Release \
     -DOPENBLAS_PROVIDES_LAPACK=ON \
+    -DBUILD_SMOKE_TEST=OFF \
+    "${_extra_config[@]}" \
     ../${_realname}-${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
