--- a/mingw-w64-opencolorio/PKGBUILD
+++ b/mingw-w64-opencolorio/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
 replaces=("${MINGW_PACKAGE_PREFIX}-${_realname}-git")
-pkgver=2.3.2
-pkgrel=4
+pkgver=2.4.1
+pkgrel=1
 pkgdesc="A color management framework for visual effects and animation (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -33,9 +33,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 checkdepends=("${MINGW_PACKAGE_PREFIX}-openshadinglanguage")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python bindings")
 source=(https://github.com/AcademySoftwareFoundation/OpenColorIO/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz
-        0003-fix-python-sitearch.patch)
-sha256sums=('6bbf4e7fa4ea2f743a238cb22aff44890425771a2f57f62cece1574e46ceec2f'
-            '4bb650747906aab5b71579d05674ee59a811d6370a6dcda93b5880abb094be70')
+        0003-fix-python-sitearch.patch
+        0004-fix-intrinsics.patch)
+sha256sums=('d4eb15408b33dffd6ba0bba9a53328085b40bdd9319fa3d0d7348d06a8cbe842'
+            '4bb650747906aab5b71579d05674ee59a811d6370a6dcda93b5880abb094be70'
+            '44a796af3431463e44d4288c392bec10b8d67aafe817a08ca99adca45b163a0d')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -48,7 +50,8 @@ apply_patch_with_msg() {
 prepare() {
   cd ${_realname}-${pkgver}
   apply_patch_with_msg \
-    0003-fix-python-sitearch.patch
+    0003-fix-python-sitearch.patch \
+    0004-fix-intrinsics.patch
 }
 
 build() {
