libuninameslist: update to 20240910

--- a/mingw-w64-libuninameslist/PKGBUILD
+++ b/mingw-w64-libuninameslist/PKGBUILD
@@ -3,17 +3,16 @@
 _realname=libuninameslist
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=20230916
+pkgver=20240910
 pkgrel=1
 pkgdesc="Library of Unicode annotation data (mingw-w64)"
 arch=(any)
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libuninameslist.sourceforge.io/"
-license=("BSD")
+license=("spdx:BSD-3-Clause")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
-options=('staticlibs' 'strip')
 source=(${_realname}-dist-${pkgver}.tar.gz::https://github.com/fontforge/libuninameslist/releases/download/${pkgver}/libuninameslist-dist-${pkgver}.tar.gz)
-sha256sums=('3ce49721de808a389f90997e9217adac449ab23e2fbf2115b22a8664e0e0a686')
+sha256sums=('e59aab324ca0a3a713fe85c09a56c40c680a8458438d90624597920b3ef0be26')
 
 prepare() {
   cd "${_realname}-${pkgver}"
