python-tox: update to 4.23.2

--- a/mingw-w64-python-tox/PKGBUILD
+++ b/mingw-w64-python-tox/PKGBUILD
@@ -3,18 +3,16 @@
 _realname=tox
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
-pkgver=4.13.0
-pkgrel=3
+pkgver=4.23.2
+pkgrel=1
 pkgdesc="Python virtualenv management and testing tool (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: tox'
 )
-url="https://tox.readthedocs.io"
+msys2_repository_url='https://github.com/tox-dev/tox/'
+url='https://tox.wiki/'
 license=('spdx:MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
@@ -32,15 +30,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-filelock")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('dd789a554c16c4b532924ba393c92fc8991323c4b3d466712bfecc8c9b9f24f7')
-
-prepare() {
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('86075e00e555df6e82e74cfc333917f91ecb47ffbc868dcafbd2672e332f4a2c')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
