--- a/mingw-w64-vulkanscenegraph/PKGBUILD
+++ b/mingw-w64-vulkanscenegraph/PKGBUILD
@@ -4,8 +4,8 @@ _realname=VulkanSceneGraph
 pkgbase=mingw-w64-${_realname,,}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname,,}"
          "${MINGW_PACKAGE_PREFIX}-${_realname,,}-docs")
-pkgver=1.1.3
-pkgrel=2
+pkgver=1.1.8
+pkgrel=1
 pkgdesc="Vulkan & C++17 based Scene Graph Project (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,11 +26,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
 # The '0001-vsg-1.1.3-devendor-glslang.patch' patch
 # copied from https://github.com/microsoft/vcpkg/pull/38294
 source=("${msys2_repository_url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        '0001-vsg-1.1.3-devendor-glslang.patch'
         '0002-vsg-1.1.3-fix-win32-window.patch')
-sha256sums=('76653990544a004563295bcaf651f1546febe71be4f85038ffa11f1ca905510d'
-            'ab7b6310336f6ce4bc0b6b332d08e8e5d3be5919e7feeb56602399ff2b51548d'
-            '063f6ef9ecba2f1f7cb846e3c160caf6fd8a38ad6cf8e7d387e6c0bdc2ae8a59')
+sha256sums=('94a3cebdfddf4759d17bbf0cc9f3278851eb899bdc660eb4681960e4cdd2ad6a'
+            '2e6d8b0c2434a98eb67a70afb8643f109592dcea2e6afdbe2f6fe59e6783d792')
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -46,7 +44,6 @@ prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
 
   apply_patch_with_msg \
-    0001-vsg-1.1.3-devendor-glslang.patch \
     0002-vsg-1.1.3-fix-win32-window.patch
 }
 
@@ -65,6 +62,7 @@ build() {
       "${extra_config[@]}" \
       -DBUILD_{SHARED,STATIC}_LIBS=ON \
       -DVSG_SUPPORTS_ShaderCompiler=1 \
+      -DGLSLANG_MIN_VERSION=15 \
       -DVSG_SUPPORTS_Windowing=1 \
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
