libultrahdr: tweak pc cflags (#22696)
* libultrahdr: tweak pc cflags

* link upstream issue

---------

Co-authored-by: Christoph Reiter <reiter.christoph@gmail.com>

--- a/mingw-w64-libultrahdr/PKGBUILD
+++ b/mingw-w64-libultrahdr/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libultrahdr
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Library for encoding and decoding ultrahdr images (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,8 +19,17 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-winpthreads")
-source=("${_realname}-${pkgver}.tar.gz::https://github.com/google/libultrahdr/archive/v${pkgver}.tar.gz")
-sha512sums=('9a00b977d4b6721ed2b4919ca11b22158b3b96cf7a23de8f043c0057fd6e0cbb18311c3a08e36f7dcb2ab9d0bfad337d205bbeb1ef3090b92f9cf3017500b4ff')
+source=("${_realname}-${pkgver}.tar.gz::https://github.com/google/libultrahdr/archive/v${pkgver}.tar.gz"
+        "001-pkg-config.patch")
+sha512sums=('9a00b977d4b6721ed2b4919ca11b22158b3b96cf7a23de8f043c0057fd6e0cbb18311c3a08e36f7dcb2ab9d0bfad337d205bbeb1ef3090b92f9cf3017500b4ff'
+            'ccaa15bc71c0c4a88044bd35ab929b88763cf20838f6e3b0bf7b3623ea851649e97fb0dac633a1160af805d63634a1f98e4f5f19415a7647d589f23c63f08add')
+
+prepare() {
+  cd "${_realname}-${pkgver}"
+
+  # https://github.com/google/libultrahdr/issues/289
+  patch -Np1 -i "${srcdir}"/001-pkg-config.patch
+}
 
 build() {
   declare -a extra_config
