--- a/mingw-w64-7zip/PKGBUILD
+++ b/mingw-w64-7zip/PKGBUILD
@@ -4,7 +4,7 @@ _realname=7zip
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.09
-pkgrel=1
+pkgrel=2
 pkgdesc="A file archiver with a high compression ratio (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,15 +17,20 @@ license=('spdx:LGPL-2.1-or-later AND BSD-3-Clause')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 source=("$url/a/7z${pkgver//./}-src.tar.xz"
-        001-disable-static.patch)
+        001-disable-static.patch
+        002-guard-msvc-code.patch)
 sha256sums=('49c05169f49572c1128453579af1632a952409ced028259381dac30726b6133a'
-            '80678c664cefb38e6402c83fc0878911c142e471ce42665291bb313d8c8e5185')
+            '80678c664cefb38e6402c83fc0878911c142e471ce42665291bb313d8c8e5185'
+            '6e2898dd658d760cf82b591d90031cd06cf670714e611a9d5b662bb25f426ded')
 
 prepare () {
   if [[ ${CC} == clang ]] ; then
     sed -i 's/-Werror/ -Wno-missing-exception-spec -Wno-unused-but-set-variable -Wno-unknown-attributes/' */*.mak */*/*.mak
   fi
   patch -p1 -i ${srcdir}/001-disable-static.patch
+
+  # https://sourceforge.net/p/sevenzip/bugs/2530/
+  patch -p1 -i ${srcdir}/002-guard-msvc-code.patch
 }
 
 build() {
