python-pygithub: update to 2.5.0

--- a/mingw-w64-python-pygithub/PKGBUILD
+++ b/mingw-w64-python-pygithub/PKGBUILD
@@ -1,11 +1,10 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
 
 _realname=pygithub
-_pyname=PyGithub
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.3.0
-pkgrel=2
+pkgver=2.5.0
+pkgrel=1
 pkgdesc="Use the full Github API v3 (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +20,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-python-deprecated"
          "${MINGW_PACKAGE_PREFIX}-python-requests"
          "${MINGW_PACKAGE_PREFIX}-python-dateutil"
          "${MINGW_PACKAGE_PREFIX}-python-typing_extensions"
-         "${MINGW_PACKAGE_PREFIX}-python-pynacl")
+         "${MINGW_PACKAGE_PREFIX}-python-pynacl"
+         "${MINGW_PACKAGE_PREFIX}-python-urllib3")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
@@ -30,8 +30,8 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest"
               "${MINGW_PACKAGE_PREFIX}-python-cryptography"
               "${MINGW_PACKAGE_PREFIX}-python-httpretty"
               "${MINGW_PACKAGE_PREFIX}-python-parameterized")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('0148d7347a1cdeed99af905077010aef81a4dad988b0ba51d4108bf66b443f7e')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('e1613ac508a9be710920d26eb18b1905ebd9926aa49398e88151c1b526aad3cf')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
