python-nvchecker: update to 2.16

--- a/mingw-w64-python-nvchecker/PKGBUILD
+++ b/mingw-w64-python-nvchecker/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=nvchecker
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.15.1
-pkgrel=3
+pkgver=2.16
+pkgrel=1
 pkgdesc="New version checker for software releases (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,9 +35,9 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-python-lxml: for the htmlparser source"
             "${MINGW_PACKAGE_PREFIX}-python-awesomeversion: for sorting versions"
             "${MINGW_PACKAGE_PREFIX}-libnotify: for nvchecker-notify"
             "git: support for git repositories")
-options=(!strip)
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a2e2b0a8dd4545e83e0032e8d4a4d586c08e2d8378a61b637b45fdd4556f1167')
+sha256sums=('c17ee55fbe14a8f8b38c339cda6dafad25279b86ef3a268695533d4fbde2ac86')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
