--- a/mingw-w64-oh-my-posh/PKGBUILD
+++ b/mingw-w64-oh-my-posh/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=oh-my-posh
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=24.5.1
+pkgver=24.11.2
 pkgrel=1
 pkgdesc="A prompt theme engine for any shell (mingw-w64)"
 arch=('any')
@@ -18,7 +18,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-go"
              "${MINGW_PACKAGE_PREFIX}-cc")
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: to have icons in prompt themes")
 source=("https://github.com/JanDeDobbeleer/oh-my-posh/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('65a1ae706724beca322bd93ccb12b650046198a27e11eaa7e915b969e5508aa4')
+sha256sums=('22b1bfc7614a396e6acb7aa3ae60943f44e588fb9ede163e3fb18fc2a2125620')
 
 build() {
     export GOOS=windows
@@ -33,7 +33,7 @@ build() {
     go build \
       -ldflags="-linkmode=external \
       -X github.com/jandedobbeleer/oh-my-posh/src/build.Version=${pkgver} \
-      -X github.com/jandedobbeleer/oh-my-posh/src/build.Date=$(date +%F)" \
+      -X github.com/jandedobbeleer/oh-my-posh/src/build.Date=$(date --utc --date="@${SOURCE_DATE_EPOCH:-$(date +%s)}" '+%Y-%m-%dT%H:%M:%S %Z')" \
       -o "${_realname}.exe"
 }
 
