oh-my-posh: avoid spaces in date to make "go build" happy
By using the iso format. I don't know how to escape it.

--- a/mingw-w64-oh-my-posh/PKGBUILD
+++ b/mingw-w64-oh-my-posh/PKGBUILD
@@ -4,7 +4,7 @@ _realname=oh-my-posh
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=24.11.2
-pkgrel=1
+pkgrel=2
 pkgdesc="A prompt theme engine for any shell (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -33,7 +33,7 @@ build() {
     go build \
       -ldflags="-linkmode=external \
       -X github.com/jandedobbeleer/oh-my-posh/src/build.Version=${pkgver} \
-      -X github.com/jandedobbeleer/oh-my-posh/src/build.Date=$(date --utc --date="@${SOURCE_DATE_EPOCH:-$(date +%s)}" '+%Y-%m-%dT%H:%M:%S %Z')" \
+      -X github.com/jandedobbeleer/oh-my-posh/src/build.Date=$(date --utc --date="@${SOURCE_DATE_EPOCH:-$(date +%s)}" --iso-8601=seconds)" \
       -o "${_realname}.exe"
 }
 
