assimp: set DXSDK_DIR
clangarm64 fails to find dx libs currently, maybe this helps

--- a/mingw-w64-assimp/PKGBUILD
+++ b/mingw-w64-assimp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=assimp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=5.4.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Portable Open Source library to import various well-known 3D model formats in an uniform manner (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -26,6 +26,7 @@ sha256sums=('66dfbaee288f2bc43172440a55d0235dfc7bf885dda6435c038e8000e79582cb')
 build() {
   # RelWithDebInfo build type is required to match with qt6-3d (#11959)
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+  DXSDK_DIR=${MINGW_PREFIX} \
   cmake \
     -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
