mosquitto: Update to 2.0.20
It now requires threading and fails to build if disabled (likely not tested upstream)
so try using winpthreads. Hopefully good enough.

--- a/mingw-w64-mosquitto/PKGBUILD
+++ b/mingw-w64-mosquitto/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=mosquitto
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.0.18
-pkgrel=4
+pkgver=2.0.20
+pkgrel=1
 pkgdesc="An Open Source MQTT Broker (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://mosquitto.org"
+msys2_repository_url="https://github.com/eclipse-mosquitto/mosquitto"
 msys2_references=(
   "cpe: cpe:/a:eclipse:mosquitto"
 )
@@ -25,11 +26,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-docbook-xsl")
 source=("https://mosquitto.org/files/source/mosquitto-${pkgver}.tar.gz"{,.asc}
         '0001-mosquitto-2.0.18-fix-static-libname.patch'
-        '0002-mosquitto-2.0.18-pkgconf-static-cflags.patch')
-sha256sums=('d665fe7d0032881b1371a47f34169ee4edab67903b2cd2b4c083822823f4448a'
+        '0002-mosquitto-2.0.18-pkgconf-static-cflags.patch'
+        '0003-use-winpthreads.patch')
+sha256sums=('ebd07d89d2a446a7f74100ad51272e4a8bf300b61634a7812e19f068f2759de8'
             'SKIP'
             '153ad2cf3fd8708be469ba2c638e9951ef27841fbd3305b96e5b37781fe5fd09'
-            '6ce467f87cd3b2c1b57d2ed069d922410ce03744f8115156785438434fcb2377')
+            'c19505bec196a82c1c7955314355645eba737998cc99468a2c9836843c8a7c06'
+            'f4c6e6046ba0e678248299165854d975016d4f520b8e2aff7a11e1e3c961788e')
 validpgpkeys=('A0D6EEA1DCAE49A635A3B2F0779B22DFB3E717B7') # Roger A. Light <roger@atchoo.org>
 
 prepare() {
@@ -37,6 +40,8 @@ prepare() {
 
   patch -p1 -i "${srcdir}/0001-mosquitto-2.0.18-fix-static-libname.patch"
   patch -p1 -i "${srcdir}/0002-mosquitto-2.0.18-pkgconf-static-cflags.patch"
+  # It's trying to use Pthreads4W, which we don't have 
+  patch -p1 -i "${srcdir}/0003-use-winpthreads.patch"
 }
 
 build() {
@@ -47,6 +52,10 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ $MINGW_PACKAGE_PREFIX != *-clang-* ]]; then
+    CFLAGS+=" -Wno-incompatible-pointer-types"
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
