cvise: colordiff is an MSYS2 package

--- a/mingw-w64-cvise/PKGBUILD
+++ b/mingw-w64-cvise/PKGBUILD
@@ -4,7 +4,7 @@ _realname=cvise
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.11.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Super-parallel Python port of the C-Reduce (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -30,7 +30,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-clang-tools-extra"
 )
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
-optdepends=("${MINGW_PACKAGE_PREFIX}-colordiff")
+optdepends=("colordiff")
 source=("https://github.com/marxin/cvise/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('7e3e473843aa79afb98f581d2e100efa47db80df3a961565b691d7b4a4ebd14b')
 
