assimp: disable assimp-viewer on clangarm64
It requires d3dx9 library which is not available for ARM64 on Windows.

--- a/mingw-w64-assimp/PKGBUILD
+++ b/mingw-w64-assimp/PKGBUILD
@@ -4,10 +4,10 @@ _realname=assimp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=5.4.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Portable Open Source library to import various well-known 3D model formats in an uniform manner (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.assimp.org/"
 msys2_references=(
   "cpe: cpe:/a:assimp:assimp"
@@ -33,7 +33,7 @@ build() {
     -DCMAKE_BUILD_TYPE=RelWithDebInfo \
     -DASSIMP_WARNINGS_AS_ERRORS=OFF \
     -DASSIMP_BUILD_ASSIMP_TOOLS=ON \
-    -DASSIMP_BUILD_ASSIMP_VIEW=ON \
+    -DASSIMP_BUILD_ASSIMP_VIEW=$([[ ${CARCH} == aarch64 ]] && echo "OFF" || echo "ON") \
     -DASSIMP_BUILD_TESTS=OFF \
     -DASSIMP_BUILD_ZLIB=OFF \
     -DASSIMP_IGNORE_GIT_HASH=ON \
