cmake: Fix FindOpenMP with Flang

--- a/mingw-w64-cmake/PKGBUILD
+++ b/mingw-w64-cmake/PKGBUILD
@@ -12,7 +12,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.31.1
 _rc=""
 _pkgver=${pkgver}${_rc}
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform open-source make system"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -51,11 +51,13 @@ source=("https://github.com/Kitware/CMake/releases/download/v${_pkgver}/${_realn
         "0001-Disable-response-files-for-MSYS-Generator.patch"
         "0002-Do-not-install-Qt-bundle-in-cmake-gui.patch"
         "0003-fix-find-python-on-mingw-aarch64.patch"
+        "0004-fix-find-openmp-with-llvm-flang-on-windows.patch"
         "0005-Default-to-ninja-generator.patch")
 sha256sums=('c4fc2a9bd0cd5f899ccb2fb81ec422e175090bc0de5d90e906dd453b53065719'
             '25793edcbac05bb6d17fa9947b52ace4a6b5ccccf7758e22ae9ae022ed089061'
             'f6cf6a6f2729db2b9427679acd09520af2cd79fc26900b19a49cead05a55cd1a'
             '557b5cbc05d4d50b3a67a7892391fcaa5cd95c492cdb4338d86305d1f4a3b88a'
+            'b806fdac74a52b177276b948d7f3bbbbc03ef2984adec11a1c7c05b4ff57bcc5'
             '426818278090704d2a12f62ef3dfd94c47b11fa2784bb842989b7f6a09ee7aa2')
 
 # Helper macros to help make tasks easier #
@@ -83,6 +85,10 @@ prepare() {
     0001-Disable-response-files-for-MSYS-Generator.patch \
     0002-Do-not-install-Qt-bundle-in-cmake-gui.patch \
     0003-fix-find-python-on-mingw-aarch64.patch
+
+  # https://gitlab.kitware.com/cmake/cmake/-/merge_requests/10052
+  apply_patch_with_msg \
+    0004-fix-find-openmp-with-llvm-flang-on-windows.patch
 
   # We want cmake to default to something useful and not MSVC
   apply_patch_with_msg \
