openmp: build fortran modules with flang on all envs
Fortran modules are not portable between compilers.

--- a/mingw-w64-llvm-openmp/PKGBUILD
+++ b/mingw-w64-llvm-openmp/PKGBUILD
@@ -11,7 +11,7 @@ _version=19.1.4
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=1
+pkgrel=2
 pkgdesc="LLVM OpenMP Library (mingw-w64)"
 url="https://openmp.llvm.org/"
 msys2_references=(
@@ -30,7 +30,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-python"
-             $( [[ ${MSYSTEM} == CLANG32 ]] || echo "${MINGW_PACKAGE_PREFIX}-fc")
+             $( [[ ${MSYSTEM} == MINGW64 ]] || echo "${MINGW_PACKAGE_PREFIX}-flang")
              $( [[ $CARCH == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-uasm" ))
 _url=https://github.com/llvm/llvm-project/releases/download/${_tag}
 _pkgfn=$_realname-$pkgver.src
@@ -98,8 +98,9 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
       -DCMAKE_SYSTEM_IGNORE_PATH=/usr/lib \
-      -DLIBOMP_FORTRAN_MODULES="$( [[ ${MSYSTEM} == CLANG32 ]] && echo OFF || echo ON )" \
+      -DLIBOMP_FORTRAN_MODULES="$( [[ ${MSYSTEM} == MINGW64 ]] && echo OFF || echo ON )" \
       -DLIBOMP_ENABLE_SHARED="$( [[ $shared_libs == static ]] && echo OFF || echo ON )" \
+      -DLIBOMP_INSTALL_ALIASES=OFF \
       "${_extra_config[@]}" \
       -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python.exe \
       -Wno-dev \
@@ -111,8 +112,8 @@ build() {
 }
 
 package() {
-  DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install "${srcdir}/build-${MSYSTEM}-shared"
   DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install "${srcdir}/build-${MSYSTEM}-static"
+  DESTDIR=${pkgdir} ${MINGW_PREFIX}/bin/cmake --install "${srcdir}/build-${MSYSTEM}-shared"
 
   install -Dm644 $_pkgfn/LICENSE.TXT "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
