--- a/mingw-w64-pkcs11-helper/PKGBUILD
+++ b/mingw-w64-pkcs11-helper/PKGBUILD
@@ -12,17 +12,18 @@ url='https://github.com/OpenSC/pkcs11-helper/'
 license=('spdx:GPL-2.0 or BSD-3-Clause')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-openssl"
              "man2html")
+depends=("${MINGW_PACKAGE_PREFIX}-openssl")
 source=("https://github.com/OpenSC/${_realname}/releases/download/${_realname}-${pkgver}/${_realname}-${pkgver}.tar.bz2")
 sha256sums=('4c5815ba910cabf26df08d449ca2909daf4538c9899aa7f7fadc61229d3488a9')
 
-build() {
-  cd "${_realname}-${pkgver}"
+prepare() {
+  cd "${srcdir}/${_realname}-${pkgver}"
   autoreconf -ivf
-  cd ..
+}
 
-  mkdir -p "build-${MSYSTEM}" && cd "build-${MSYSTEM}"
+build() {
+  mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   ../"${_realname}-${pkgver}"/configure \
     --prefix="${MINGW_PREFIX}" \
@@ -36,13 +37,13 @@ build() {
 }
 
 check() {
-  cd "build-${MSYSTEM}"
+  cd "${srcdir}/build-${MSYSTEM}"
 
   make check
 }
 
 package() {
-  cd "build-${MSYSTEM}"
+  cd "${srcdir}/build-${MSYSTEM}"
 
   make install DESTDIR="${pkgdir}"
 
