--- a/mingw-w64-libaec/PKGBUILD
+++ b/mingw-w64-libaec/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libaec
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.1.3
-pkgrel=2
+pkgrel=3
 pkgdesc="Adaptive Entropy Coding library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
@@ -20,7 +20,7 @@ source=("https://gitlab.dkrz.de/k202009/libaec/-/archive/v${pkgver}/libaec-v${pk
         "0005-cmake-fix-cmake-install.patch")
 sha256sums=('46216f9d2f2d3ffea4c61c9198fe0236f7f316d702f49065c811447186d18222'
             '6f21d732c139592c18d867bbed43a27150ae513b425fa70f6c9eb7f054561dd3'
-            '9acc599a0f809b1f196c2ff0db6990901e812e659a594041e7540c4980b3fc91')
+            '3076466b341dc7d84df965c68accbce45833c4bc4671b0e6c98645a44ae13f06')
 
 prepare() {
   cd "${srcdir}/${_realname}-v${pkgver}"
@@ -52,9 +52,10 @@ build() {
 }
 
 package() {
-  cd ${srcdir}/build-${MSYSTEM}
+  cd "${srcdir}"/build-${MSYSTEM}
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake --install .
 
-  install -Dm644 ${srcdir}/${_realname}-v${pkgver}/LICENSE.txt ${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
+  install -Dm644 "${srcdir}"/${_realname}-v${pkgver}/LICENSE.txt \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
